# py_pos

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_models.py
alembic/: env.py
alembic/versions/: 225dc6becd0a_add_model_serie.py  323865ccd646_add_payment_method_table.py  40491391d119_add_tenant_and_auth_models_with_.py  89130c2ecfa5_initial_migration.py  c1df93748b95_initial_migration.py
docs/: base.md  usage.txt
src/: main.py
src/auth/: controller.py  model.py  service.py
src/config/: api.py  database.py  db.py  logging.py  multitenant.py  settings.py
src/features/auth/: model.py  routes.py  service.py
src/features/payment_method/: __init__.py  model.py  routes.py  schema.py  service.py
src/modules/: __init__.py
src/modules/auth/: __init__.py  router.py  schema.py  service.py
src/modules/serie/: model.py
src/modules/tenant/: __init__.py  model.py  router.py  schema.py  service.py
src/modules/user/: model.py  router.py
